@@ -1,5 +1,7 @@
 Upcoming:
 - Temporary 'fix' to avoid what looks like a bug in Vanilla when clearing out large sections of a chunk. This bug manifests itself when clearing up chunks after being damaged by an explosion
+- Better city generation with 'floating' landscape type by improving the way the height of a chunk is detected
+- New 'cityAvoidVoid' config option: Only used with floating landscape type: if true an additional detection is done to see if the chunk is void and in that case the city isn't generated there. Otherwise you might get city chunks on the border of islands which sometimes looks weird
 
 1.16-4.0.3-alpha:
 - Considerably improved Lost City worldgen on world types that use the standard NoiseChunkGenerator
